--- a/.github/workflows/Cypressmain.yml
+++ b/.github/workflows/Cypressmain.yml
@@ -1,5 +1,7 @@
-name: End-to-end tests
+name: Cypress Tests
+
 on: push
+
 jobs:
   cypress-run:
     runs-on: ubuntu-22.04
@@ -10,3 +12,6 @@ jobs:
       # and run all Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v6
+        with:
+          build: npm run build
+          start: npm start
