--- a/.github/workflows/Cypressmain.yml
+++ b/.github/workflows/Cypressmain.yml
@@ -4,7 +4,12 @@ on: push
 
 jobs:
   cypress-run:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
+    
+    strategy:
+      matrix:
+        node-version: [20.x]
+      
     steps:
       - name: Checkout
         uses: actions/checkout@v4
