--- a/.github/workflows/Cypressmain.yml
+++ b/.github/workflows/Cypressmain.yml
@@ -13,6 +13,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Set up Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+      
+        
       # Install npm dependencies, cache them correctly
       # and run all Cypress tests
       - name: Cypress run
