--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,13 @@ jobs:
       - name: Install dependencies
         run: npm install
         
-      - name: Cypress run
-        uses: cypress-io/github-action@v6
+      - name: Start the application
+        run: npm start &
+        
+      - name: Run Cypress tests
+        uses: cypress-io/github-action@v5
         with:
-          build: npm run build
           start: npm start
+          browser: chrome
+          headless: true
+          
