--- a/.github/workflows/Cypressmain.yml
+++ b/.github/workflows/Cypressmain.yml
@@ -18,12 +18,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-      
+          
+      - name: Install dependencies
+        run: npm install
         
       # Install npm dependencies, cache them correctly
       # and run all Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
-          build: npm run build
           start: npm start
