--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "cypressautomation",
   "version": "1.0.0",
   "main": "index.js",
+
+
+
   "scripts": {
-    "test": "npx cypress runnpm install @badeball/cypress-cucumber-preprocessor"
+    "test": "npx cypress run",
+    "SmokeTest": "npx cypress run --headed --browser chrome --spec \"cypress/Integration/Tests/Actions.js\""
   },
+
+  
   "author": "",
   "license": "ISC",
   "description": "",
@@ -27,4 +33,7 @@
     "process": "^0.11.10",
     "typescript": "^5.5.4"
   }
+
+  
+
 }
